syntax = "proto3";

package deployer;

option go_package = "deployer/pkg/proto";

// Service definition for orchestrating services
service ServiceDeployer {

  // Create a new service from a folder of files
  rpc CreateService (RegisterServiceRequest) returns (RegisterServiceResponse);

  // Check the status of a service by its ID
  rpc PingService (PingServiceRequest) returns (PingServiceResponse);

  rpc PingInstance (PingInstanceRequest) returns (InstanceInfo);

  // Stop a service by its ID
  rpc StopInstances (StopInstancesRequest) returns (StopInstancesResponse);

  rpc CreateInstance (createInstanceRequest) returns (createInstanceResponse);
}

// Request to create a new service
message RegisterServiceRequest {
  string code_archive = 1;
}

// Response after creating a service
message RegisterServiceResponse {
  string id = 1; // UUID of the created service
}

// Request to check the status of a service
message PingServiceRequest {
  string id = 1; // UUID of the service
}

// Response for the Ping endpoint
message PingServiceResponse {
  string message = 1; // Status message or additional information
  repeated InstanceInfo instances = 2;
}

message PingInstanceRequest {
  string instance_id = 1; // UUID of the instance
}

message InstanceInfo {
  int32 status_code = 1; // Status code of the operation
  string message = 2; // Status message or additional information
  int32 web_port = 3;
  string ip = 4;
  string instance_id = 5; // UUID of the instance
  int32 last_check = 6; // Timestamp of the last check
}

message createInstanceRequest {
  string service_id = 1;
  string ip = 2;
  int32 web_port = 3;
}

message createInstanceResponse {
  string instance_id = 1;
  bool success = 2;
}

message StopInstancesRequest {
  repeated string instance_ids = 1;
}

message StopInstancesResponse {
  bool success = 1;
}
